Add another font family for specific elements

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,6 +3,10 @@
     background-color: #f8f8f8;
     min-height: 100vh;
   }
+
+  p, h1, h2, label, input, button {
+    font-family: 'Libre Baskerville', serif;
+  }
   
   * {
     box-sizing: border-box;
