--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,7 +22,7 @@
   }
   
   a:hover i {
-    color: #2142b2;
+    color: #f6ea0d;
     transition: color ease-in-out 0.3s;
   }
   
@@ -36,5 +36,5 @@
   i:hover {
     cursor: pointer;
     transition: color ease-in-out 0.3s;
-    color: #2142b2;
+    color: #f6ea0d;
   }
