--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,25 @@
   .Main {
     padding-top: 81px;
   }
+
+  .Content {
+    background-color: #ffffff;
+    padding: 10px;
+    border-radius: 2px;
+    border: 1px solid #dadadf;
+  }
+  
+  .FillerImage {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .Image {
+    max-height: 40vh;
+    max-width: 100%;
+    object-fit: contain;
+  }
   
   * {
     box-sizing: border-box;
@@ -29,6 +48,10 @@
     color: #f6ea0d;
     transition: color ease-in-out 0.3s;
   }
+
+  input[type="file"] {
+    display: none;
+  }
   
   i {
     color: #cfced3;
@@ -41,4 +64,23 @@
     cursor: pointer;
     transition: color ease-in-out 0.3s;
     color: #f6ea0d;
+  }
+
+  figure {
+    text-align: center;
+    display: inline-block;
+  }
+  
+  /* scrollbar */
+  *::-webkit-scrollbar {
+    width: 5px;
+  }
+  *::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  *::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  *::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
