--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .App {
     font-family: "Anton", sans-serif;
-    background-color: #f8f8f8;
+    background-color: #cbf3f0;
     min-height: 100vh;
   }
 
@@ -45,7 +45,7 @@
   }
   
   a:hover i {
-    color: #f6ea0d;
+    color: #ff9254;
     transition: color ease-in-out 0.3s;
   }
 
@@ -63,7 +63,7 @@
   i:hover {
     cursor: pointer;
     transition: color ease-in-out 0.3s;
-    color: #f6ea0d;
+    color: #000000;
   }
 
   figure {
