--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,6 +1,6 @@
 .NavBar {
-    background-color: #ffffff;
-    border: 1px solid #dadadf;
+    background-color: #2ec4b6;
+    border: 1px solid #2ec4b6;
   }
 
   .NavLink {
@@ -8,5 +8,5 @@
   }
   
   .Active i {
-    color: #f6ea0d;
+    color: #000000;
   }
