--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -16,9 +16,21 @@
   }
   
   .Heart:hover {
-    color: #2142b2;
+    color: #000000;
   }
   
   .HeartOutline:hover {
     color: #f85032;
+  }
+
+  .Bookmark {
+    color: #000000;
+  }
+
+  .Bookmark:hover {
+    color: #969696;
+  }
+
+  .Bookmarkline:hover {
+    color: #000000;
   }
